# SpotInfer

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg  tox.ini
.cursor/rules/: project-card.mdc
.github/workflows/: pr-check.yml
src/spotinfer/: __init__.py  main.py  offers.py
src/spotinfer/adapter/: __init__.py  datacrunch_adapter.py
src/spotinfer/cli/: __init__.py  interactive.py  offers.py
src/spotinfer/collect/: __init__.py
src/spotinfer/prepare/: __init__.py  offers.py
src/spotinfer/provision/: __init__.py
src/spotinfer/run/: __init__.py
src/spotinfer/utils/: __init__.py  gpu.py
tests/: conftest.py  test_adapter.py  test_gpu_utils.py  test_prepare.py
